<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/home_24px"
        android:title="@string/bottom_navigation_menu_home_fragment" />

    <item
        android:id="@+id/analysisFragment"
        android:icon="@drawable/leaderboard_24px"
        android:title="@string/bottom_navigation_menu_analysis_fragment" />

    <item
        android:id="@+id/blankFragment"
        android:title=""
        android:enabled="false"
    />

    <item
        android:id="@+id/historyFragment"
        android:icon="@drawable/schedule_24px"
        android:title="@string/bottom_navigation_menu_history_fragment" />

    <item
        android:id="@+id/userProfileFragment"
        android:icon="@drawable/account_circle_24px"
        android:title="@string/bottom_navigation_menu_user_profile_fragment" />
</menu>