<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.SettingActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/backButton"
            style="?attr/materialIconButtonFilledStyle"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="80dp"
            android:contentDescription="@string/filled_icon_btn_desc"
            app:backgroundTint="?attr/colorSecondaryContainer"
            app:icon="@drawable/arrow_back_24px"
            app:iconTint="?attr/colorOnSecondaryContainer" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/activity_setting_textview_heading"
            android:textColor="?attr/colorOnSurface"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_medium"
                android:textColor="?attr/colorOnSurface"
                android:textSize="16sp"
                android:text="@string/activity_setting_textview_age" />

            <TextView
                android:id="@+id/ageDataTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:textColor="?attr/colorOnSurface"
                android:textSize="16sp"
                android:text="@string/activity_setting_textview_age_default"
                android:textAlignment="textEnd"
                android:layout_weight="0" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_medium"
                android:textColor="?attr/colorOnSurface"
                android:textSize="16sp"
                android:text="@string/activity_setting_textview_height" />

            <TextView
                android:id="@+id/heightDataTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:textColor="?attr/colorOnSurface"
                android:textSize="16sp"
                android:text="@string/activity_setting_textview_height_default"
                android:textAlignment="textEnd"
                android:layout_weight="0" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:textColor="?attr/colorOnSurface"
                android:layout_marginStart="5dp"
                android:textSize="16sp"
                android:textAlignment="textEnd"
                android:layout_weight="0"
                android:text="@string/activity_setting_textview_height_metric" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_medium"
                android:textColor="?attr/colorOnSurface"
                android:textSize="16sp"
                android:text="@string/activity_setting_textview_weight" />

            <TextView
                android:id="@+id/weightDataTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:textColor="?attr/colorOnSurface"
                android:textSize="16sp"
                android:text="@string/activity_setting_textview_weight_default"
                android:textAlignment="textEnd"
                android:layout_weight="0" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:textColor="?attr/colorOnSurface"
                android:layout_marginStart="5dp"
                android:textSize="16sp"
                android:textAlignment="textEnd"
                android:layout_weight="0"
                android:text="@string/activity_setting_textview_weight_metric" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_semibold"
                android:textColor="?attr/colorOnSurface"
                android:textSize="16sp"
                android:text="@string/activity_setting_textview_update" />

            <ImageButton
                android:id="@+id/updateProfileButton"
                android:background="@android:color/transparent"
                android:contentDescription="@string/filled_icon_btn_desc"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="0"
                app:srcCompat="@drawable/chevron_right_24px" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_semibold"
                android:textColor="?attr/colorOnSurface"
                android:textSize="16sp"
                android:text="@string/activity_setting_textview_dark_mode" />

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/darkModeSwitch"
                android:layout_width="wrap_content"
                android:layout_height="50dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_semibold"
                android:textColor="?attr/colorOnSurface"
                android:textSize="16sp"
                android:text="@string/activity_setting_textview_terms_and_condition" />

            <ImageButton
                android:id="@+id/termsAndConditionButton"
                android:background="@android:color/transparent"
                android:contentDescription="@string/filled_icon_btn_desc"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="0"
                app:srcCompat="@drawable/chevron_right_24px" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_semibold"
                android:textColor="?attr/colorOnSurface"
                android:textSize="16sp"
                android:text="@string/activity_setting_textview_privacy_policy" />

            <ImageButton
                android:id="@+id/privacyAndPolicyButton"
                android:background="@android:color/transparent"
                android:contentDescription="@string/filled_icon_btn_desc"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="0"
                app:srcCompat="@drawable/chevron_right_24px" />

        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="100dp"
        android:fontFamily="@font/poppins_bold"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/activity_setting_textview_logout_button"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>