<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.landingscreen.LandingScreenSeven">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/backButton"
            style="?attr/materialIconButtonFilledStyle"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="80dp"
            android:contentDescription="@string/filled_icon_btn_desc"
            app:backgroundTint="?attr/colorSecondaryContainer"
            app:icon="@drawable/arrow_back_24px"
            app:iconTint="?attr/colorOnSecondaryContainer" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/activity_landing_screen_seven_textview_heading"
            android:textColor="?attr/colorOnSurface"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/activity_landing_screen_seven_textview_content"
            android:textColor="?attr/colorOnSurface"
            android:textSize="16sp" />

        <RadioGroup
            android:id="@+id/diseaseRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="60dp">

            <RadioButton
                android:id="@+id/noneRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:button="@android:color/transparent"
                android:fontFamily="@font/poppins_semibold"
                android:textSize="14sp"
                android:padding="8dp"
                android:textColor="@drawable/gender_text_selector"
                android:background="@drawable/gender_background_selector"
                android:text="@string/activity_landing_screen_seven_button_text_no" />

            <RadioButton
                android:id="@+id/lightRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:button="@android:color/transparent"
                android:fontFamily="@font/poppins_semibold"
                android:textSize="14sp"
                android:padding="8dp"
                android:textColor="@drawable/gender_text_selector"
                android:background="@drawable/gender_background_selector"
                android:text="@string/activity_landing_screen_seven_button_text_light" />

            <RadioButton
                android:id="@+id/hardRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:button="@android:color/transparent"
                android:fontFamily="@font/poppins_semibold"
                android:textSize="14sp"
                android:padding="8dp"
                android:textColor="@drawable/gender_text_selector"
                android:background="@drawable/gender_background_selector"
                android:text="@string/activity_landing_screen_seven_button_text_hard" />

        </RadioGroup>

    </LinearLayout>

    <Button
        android:id="@+id/nextButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="100dp"
        android:fontFamily="@font/poppins_bold"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/all_activity_next_button"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>