<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/popUpRejectCameraPermission"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    app:cardElevation="1dp"
    android:layout_margin="24dp"
    app:strokeWidth="0dp"
    app:cardBackgroundColor="?attr/colorSurface">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/pop_up_reject_camera_textview_heading" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/pop_up_reject_camera_textview_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancelButton"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:textSize="14sp"
                android:textColor="?attr/colorOnSurface"
                android:text="@string/pop_up_reject_camera_button_cancel_text" />

            <Button
                android:id="@+id/openSettingButton"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:textSize="14sp"
                android:text="@string/pop_up_reject_camera_button_go_to_setting" />
        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>